force-app/main/default/objects/DFDFW_Service__mdt/DFDFW_Service__mdt.object-meta.xml
<CustomObject>
    <label>DFDFW Service</label>
    <pluralLabel>DFDFW Services</pluralLabel>
</CustomObject>