force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Active__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>