force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Address_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Validation</label>
    <type>Checkbox</type>
</CustomField>