force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Document_Types__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Document_Types__c</fullName>
    <inlineHelpText>Semicolon separated List</inlineHelpText>
    <label>Document Types</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>