force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Document_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Upload</label>
    <type>Checkbox</type>
</CustomField>