force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Icon_File_Name__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Icon_File_Name__c</fullName>
    <label>Icon File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>