force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Notice_Text__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Notice_Text__c</fullName>
    <label>Notice Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>