force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Permit_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Permit_Template_Id__c</fullName>
    <label>Permit Template Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>