force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Service_Id__c</fullName>
    <label>Service Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>