force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Service_URL__c</fullName>
    <label>Service URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>