force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Tile_Subheading__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Tile_Subheading__c</fullName>
    <label>Tile Subheading</label>
    <type>TextArea</type>
</CustomField>