force-app/main/default/objects/DFDFW_Service__mdt/fields/DFDFW_Tile_Title__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Tile_Title__c</fullName>
    <label>Tile Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>